Fix horizontal scroll bar and made NEW label smaller

--- a/client/app/search/search.less
+++ b/client/app/search/search.less
@@ -29,6 +29,10 @@ div.search-container-div {
     padding-right: 0px;
 }
 
+div.search-bar {
+    width: inherit;
+}
+
 .clear-search-btn {
     margin-right: 1px;
 }
@@ -206,4 +210,9 @@ div.search-container-div {
 
 .breadcrumb-box {
     padding: 0px 10px 5px 10px;
+    width: inherit;
+}
+
+.new-results .label {
+   font-size: 60%;
 }
